Restructed the intern, trainee and employee module commom fields and attendace, Timesheet