@@ -12,7 +12,6 @@ import lombok.RequiredArgsConstructor;
 import org.springframework.stereotype.Service;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
@@ -20,19 +19,24 @@ public class DesignationServiceImpl implements DesignationService {
 
     private final DesignationRepository repository;
 
+    // ================= CREATE =================
+
     @Override
     public DesignationResponseDTO create(DesignationRequestDTO dto) {
 
-        if (repository.existsByName(dto.getName())) {
+        if (repository.existsByNameIgnoreCase(dto.getName())) {
             throw new DuplicateResourceException(
                     "Designation already exists with name: " + dto.getName());
         }
 
-        Designation entity = repository.save(
-                DesignationMapper.toEntity(dto));
+        Designation entity = DesignationMapper.toEntity(dto);
+
+        repository.save(entity);
 
         return DesignationMapper.toResponse(entity);
     }
+
+    // ================= UPDATE =================
 
     @Override
     public DesignationResponseDTO update(Long id, DesignationRequestDTO dto) {
@@ -42,19 +46,23 @@ public class DesignationServiceImpl implements DesignationService {
                         new ResourceNotFoundException(
                                 "Designation not found with id: " + id));
 
-        //  Duplicate Check During Update
-        if (repository.existsByName(dto.getName()) &&
+        // Duplicate check only if name is changing
+        if (dto.getName() != null &&
+                repository.existsByNameIgnoreCase(dto.getName()) &&
                 !entity.getName().equalsIgnoreCase(dto.getName())) {
 
             throw new DuplicateResourceException(
                     "Designation already exists with name: " + dto.getName());
         }
 
-        entity.setName(dto.getName());
+        DesignationMapper.updateEntity(entity, dto);
 
-        return DesignationMapper.toResponse(repository.save(entity));
+        repository.save(entity);
+
+        return DesignationMapper.toResponse(entity);
     }
 
+    // ================= GET BY ID =================
 
     @Override
     public DesignationResponseDTO getById(Long id) {
@@ -67,14 +75,18 @@ public class DesignationServiceImpl implements DesignationService {
         return DesignationMapper.toResponse(entity);
     }
 
+    // ================= GET ALL =================
+
     @Override
     public List<DesignationResponseDTO> getAll() {
 
         return repository.findAll()
                 .stream()
                 .map(DesignationMapper::toResponse)
-                .collect(Collectors.toList());
+                .toList();
     }
+
+    // ================= DELETE =================
 
     @Override
     public void delete(Long id) {
@@ -84,6 +96,9 @@ public class DesignationServiceImpl implements DesignationService {
                         new ResourceNotFoundException(
                                 "Designation not found with id: " + id));
 
-        repository.delete(entity);
+        // Soft delete recommended
+        entity.setActive(false);
+
+        repository.save(entity);
     }
 }
