@@ -2,11 +2,14 @@ package com.gm.hrms.service.impl;
 
 import com.gm.hrms.dto.response.TimesheetMonthlyDTO;
 import com.gm.hrms.dto.response.TimesheetReportDTO;
-import com.gm.hrms.entity.Employee;
+import com.gm.hrms.entity.PersonalInformation;
 import com.gm.hrms.entity.Timesheet;
+import com.gm.hrms.enums.TimesheetStatus;
 import com.gm.hrms.mapper.TimesheetReportMapper;
+import com.gm.hrms.repository.TimesheetEntryRepository;
 import com.gm.hrms.repository.TimesheetRepository;
 import com.gm.hrms.service.TimesheetReportService;
+import com.gm.hrms.util.TimeUtil;
 import lombok.RequiredArgsConstructor;
 import org.springframework.stereotype.Service;
 
@@ -20,61 +23,93 @@ public class TimesheetReportServiceImpl implements TimesheetReportService {
 
     private final TimesheetRepository repo;
     private final TimesheetReportMapper mapper;
+    private final TimesheetEntryRepository entryRepository;
 
     @Override
-    public List<TimesheetReportDTO> byDateRange(LocalDate s, LocalDate e){
-        return repo.findByWorkDateBetween(s,e)
-                .stream().map(mapper::toDTO).toList();
-    }
-
-    @Override
-    public List<TimesheetReportDTO> byEmployee(Long id, LocalDate s, LocalDate e){
-        return repo.findByEmployeeIdAndWorkDateBetween(id,s,e)
-                .stream().map(mapper::toDTO).toList();
-    }
-
-    @Override
-    public List<TimesheetReportDTO> byProject(Long id, LocalDate s, LocalDate e){
-        return repo.findByProjectIdAndWorkDateBetween(id,s,e)
-                .stream().map(mapper::toDTO).toList();
-    }
-
-    @Override
-    public List<TimesheetReportDTO> byStatus(String status, LocalDate s, LocalDate e){
-        return repo.findByStatusAndWorkDateBetween(status,s,e)
-                .stream().map(mapper::toDTO).toList();
-    }
-
-    @Override
-    public List<TimesheetReportDTO> todayAll(){
-        return repo.findByWorkDate(LocalDate.now())
-                .stream().map(mapper::toDTO).toList();
-    }
-
-    @Override
-    public List<TimesheetReportDTO> todayByEmployee(Long id){
-        return repo.findByEmployeeIdAndWorkDateBetween(
-                id,
-                LocalDate.now(),
-                LocalDate.now()
-        ).stream().map(mapper::toDTO).toList();
-    }
-
-    @Override
-    public List<TimesheetReportDTO> todayByProject(Long id){
-        return repo.findByProjectIdAndWorkDateBetween(
-                id,
-                LocalDate.now(),
-                LocalDate.now()
-        ).stream().map(mapper::toDTO).toList();
-    }
-
-    @Override
-    public List<TimesheetMonthlyDTO> monthly(int m, int y){
-
-        return repo.findMonthly(m,y)
+    public List<TimesheetReportDTO> byDateRange(LocalDate s, LocalDate e) {
+        return repo.findByWorkDateBetween(s, e)
                 .stream()
-                .collect(Collectors.groupingBy(t->t.getEmployee().getId()))
+                .map(mapper::toDTO)
+                .toList();
+    }
+
+    @Override
+    public List<TimesheetReportDTO> byEmployee(Long id, LocalDate s, LocalDate e) {
+        return repo.findByPerson_IdAndWorkDateBetween(id, s, e)
+                .stream()
+                .map(mapper::toDTO)
+                .toList();
+    }
+
+    @Override
+    public List<TimesheetReportDTO> byProject(
+            Long projectId,
+            LocalDate start,
+            LocalDate end
+    ) {
+
+        return entryRepository
+                .findByProject_IdAndTimesheet_WorkDateBetween(
+                        projectId,
+                        start,
+                        end
+                )
+                .stream()
+                .map(mapper::toProjectDTO)
+                .toList();
+    }
+
+    @Override
+    public List<TimesheetReportDTO> byStatus(
+            TimesheetStatus status,
+            LocalDate s,
+            LocalDate e
+    ) {
+        return repo.findByStatusAndWorkDateBetween(status, s, e)
+                .stream()
+                .map(mapper::toDTO)
+                .toList();
+    }
+
+    @Override
+    public List<TimesheetReportDTO> todayAll() {
+        return repo.findByWorkDate(LocalDate.now())
+                .stream()
+                .map(mapper::toDTO)
+                .toList();
+    }
+
+    @Override
+    public List<TimesheetReportDTO> todayByEmployee(Long id) {
+        return repo.findByPerson_IdAndWorkDateBetween(
+                        id,
+                        LocalDate.now(),
+                        LocalDate.now()
+                )
+                .stream()
+                .map(mapper::toDTO)
+                .toList();
+    }
+
+    @Override
+    public List<TimesheetReportDTO> todayByProject(Long projectId) {
+
+        return entryRepository
+                .findByProject_IdAndTimesheet_WorkDate(
+                        projectId,
+                        LocalDate.now()
+                )
+                .stream()
+                .map(mapper::toProjectDTO)
+                .toList();
+    }
+
+    @Override
+    public List<TimesheetMonthlyDTO> monthly(int m, int y) {
+
+        return repo.findMonthly(m, y)
+                .stream()
+                .collect(Collectors.groupingBy(t -> t.getPerson().getId()))
                 .values()
                 .stream()
                 .map(this::buildMonthly)
@@ -82,32 +117,32 @@ public class TimesheetReportServiceImpl implements TimesheetReportService {
     }
 
     @Override
-    public TimesheetMonthlyDTO monthlyEmployee(Long empId, int m, int y){
+    public TimesheetMonthlyDTO monthlyEmployee(Long empId, int m, int y) {
 
-        List<Timesheet> list = repo.findMonthly(m,y)
+        List<Timesheet> list = repo.findMonthly(m, y)
                 .stream()
-                .filter(t->t.getEmployee().getId().equals(empId))
+                .filter(t -> t.getPerson().getId().equals(empId))
                 .toList();
 
         return buildMonthly(list);
     }
 
-    private TimesheetMonthlyDTO buildMonthly(List<Timesheet> list){
+    private TimesheetMonthlyDTO buildMonthly(List<Timesheet> list) {
 
-        if(list.isEmpty()) return null;
+        if (list.isEmpty()) return null;
 
-        Employee e = list.get(0).getEmployee();
+        PersonalInformation p = list.getFirst().getPerson();
+
+        int totalMinutes = list.stream()
+                .mapToInt(t -> t.getTotalMinutes() == null ? 0 : t.getTotalMinutes())
+                .sum();
 
         return TimesheetMonthlyDTO.builder()
-                .employeeId(e.getId())
-//                .employeeName(e.getFirstName()+" "+e.getLastName())
+                .personId(p.getId())
+                .personName(p.getFirstName() + " " + p.getLastName())
                 .totalEntries(list.size())
-                .totalHours(
-                        list.stream()
-                                .mapToDouble(t->t.getHours()==null?0:t.getHours())
-                                .sum()
-                )
+                .totalTime(TimeUtil.toHHmm(totalMinutes))
                 .build();
     }
-}
 
+}
